--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
-  <meta charset="utf-8" /> 
-  <title>To Do List </title>
+  <meta charset="utf-8" />
+  <title>To Do List</title>
   <link
     type="text/css"
     rel="stylesheet"
@@ -37,7 +37,7 @@
         id="add"
         src="https://raw.githubusercontent.com/yilianz/workspace-javascript/master/img/open.png"
       />
-      &nbsp; &nbsp; Buy groceries &nbsp;&nbsp;<img
+      &nbsp; &nbsp; Buy groceries - Brandon's List &nbsp;&nbsp;<img
         id="remove"
         src="https://raw.githubusercontent.com/yilianz/workspace-javascript/master/img/icon-trash.png"
       />
@@ -48,7 +48,7 @@
       <li id="three" class="hot">honey</li>
       <li id="four">balsamic vinegar</li>
     </ul>
-    <h2 id="save"> Save </h2> 
+    <h2 id="save">Save</h2>
   </div>
   <script src="js/add-element.js"></script>
 </body>
