--- a/index.html
+++ b/index.html
@@ -51,4 +51,28 @@
     <h2 id="save">Save</h2>
   </div>
   <script src="js/add-element.js"></script>
+
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.13.0/firebase-app.js';
+    import { getAnalytics } from 'https://www.gstatic.com/firebasejs/9.13.0/firebase-analytics.js';
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: 'AIzaSyC6MU1P2CrLf5VDOmYOezQTvNFwUvI2h5A',
+      authDomain: 'grocery-list-6bb9d.firebaseapp.com',
+      projectId: 'grocery-list-6bb9d',
+      storageBucket: 'grocery-list-6bb9d.appspot.com',
+      messagingSenderId: '922973499349',
+      appId: '1:922973499349:web:75fedc4d9d7130ead7975c',
+      measurementId: 'G-VMWWNZRN5Z',
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </body>
